--- a/src/components/DrawingPanel/DrawningPanel.scss
+++ b/src/components/DrawingPanel/DrawningPanel.scss
@@ -18,7 +18,8 @@
 }
 
 .bg-circle {
-  background: rgb(21, 7, 98);
+  background: rgb(255, 255, 255);
+  outline: 1px solid grey;
   padding: 10px;
   height: 110px;
   border-radius: 20px;
