--- a/src/components/DrawingPanel/Pixel/Pixel.scss
+++ b/src/components/DrawingPanel/Pixel/Pixel.scss
@@ -1,5 +1,8 @@
 .pixel {
-  width: 1rem;
-  height: 1rem;
-  outline: 1px solid rgb(0, 0, 0);
+  width: 1em;
+  height: 1em;
+  touch-action: none;
+  outline: 1px solid rgba(0, 0, 0, 0.452);
+  margin: 0;
+  user-select: none; /* supported by Chrome and Opera */
 }
