--- a/src/components/Editor/Editor.module.scss
+++ b/src/components/Editor/Editor.module.scss
@@ -1,3 +1,15 @@
+.wrapper {
+  border-radius: 0.25rem;
+  padding: 1rem 4rem 0rem 4rem;
+  background: rgb(115, 152, 194);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  margin: 10px auto;
+}
+
 .editor {
   position: relative;
   .size-divider {
@@ -13,12 +25,14 @@
   margin-top: 0px;
   padding-bottom: 0.5rem;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .options {
   display: flex;
   margin-bottom: 1rem;
   justify-content: center;
+  text-align: center;
 }
 
 .circle-picker {
@@ -27,6 +41,7 @@
 
 .background-modal {
   position: absolute;
+  z-index: 3;
   left: 80px;
   top: 180px;
 }
@@ -34,7 +49,7 @@
 .background-color {
   background: rgb(91, 90, 116);
   padding: 10px;
-  width: 60%;
+  width: 80%;
   margin: auto;
   margin-bottom: 20px;
   display: flex;
@@ -52,5 +67,11 @@
     height: 20px;
     margin-left: 5px;
     display: inline-block;
+  }
+}
+
+@media screen and (max-width: 645px) {
+  .wrapper {
+    margin: 10px;
   }
 }
