--- a/src/components/UI/Card/Card.scss
+++ b/src/components/UI/Card/Card.scss
@@ -1,11 +1,15 @@
 .card {
   border-radius: 0.25rem;
-  padding: 1rem 4rem 0rem 4rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding: 0.5rem;
   background: rgb(115, 152, 194);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 1200px;
+  margin: 10px auto;
+  position: relative;
+}
+
+@media screen and (max-width: 1240px) {
+  .card {
+    margin: 10px;
+  }
 }
