--- a/src/components/Editor/Editor.module.scss
+++ b/src/components/Editor/Editor.module.scss
@@ -1,13 +1,9 @@
 .wrapper {
   border-radius: 0.25rem;
-  padding: 1rem 4rem 0rem 4rem;
-  background: rgb(115, 152, 194);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 500px;
-  margin: 10px auto;
+  width: 100%;
 }
 
 .editor {
