--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -39,11 +39,19 @@
     font-size: 14px;
     display: flex;
     align-items: center;
+    &__logo {
+      width: 200px;
+      font-size: 14px;
+      margin: 0;
+    }
     .logo__img {
+      justify-content: center;
+      align-items: center;
+      display: flex;
       img {
         object-fit: contain;
-        height: 30px;
-        width: 30px;
+        height: 25px;
+        width: 25px;
       }
     }
   }
