--- a/src/Pages/ImageDetail/ImageDetail.module.scss
+++ b/src/Pages/ImageDetail/ImageDetail.module.scss
@@ -7,12 +7,11 @@
 
 .image-wrapper {
   display: flex;
-  outline: 1px solid green;
-
+  max-width: 400px;
   img {
     border: 5px solid black;
     object-fit: contain;
-    width: 400px;
+    width: 100%;
   }
 }
 
@@ -38,5 +37,11 @@
   }
   .date {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .image-wrapper {
+    margin-right: 10px;
   }
 }
