--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -44,10 +44,7 @@ a {
 }
 
 .success {
-  max-width: 300px;
-  display: block;
-  background: rgb(73, 146, 73);
+  background: green;
   padding: 10px;
-  margin: 20px auto;
   text-align: center;
 }
