--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -1,6 +1,37 @@
 .footer {
-  text-align: center;
   width: 100%;
-  font-size: 12px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   color: rgba(255, 255, 255, 0.685);
+}
+
+.year {
+  margin-top: 5px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.685);
+  padding-bottom: 5px;
+  min-width: 80px;
+  text-align: center;
+}
+
+.icons {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: row;
+}
+.icon {
+  margin: 0 2px;
+  transition: 0.3s;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  &:hover {
+    background: rgb(26, 86, 134);
+  }
+  img {
+    object-fit: contain;
+    width: 20px;
+  }
 }
